// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal can configure a wider max width 1`] = `
<div
  aria-label="Alert Modal"
  aria-modal="true"
  class="sc-dhKdcB iNMtHB ReactModal__Content _"
  data-testid="modal"
  role="alertdialog"
  tabindex="-1"
>
  <div
    class="sc-jlZhew djrzaJ"
  >
    Do you want to do the thing?
  </div>
</div>
`;

exports[`Modal can configure fullscreen 1`] = `
<div
  aria-label="Alert Modal"
  aria-modal="true"
  class="sc-dhKdcB gkSgdV ReactModal__Content _"
  data-testid="modal"
  role="alertdialog"
  tabindex="-1"
>
  <div
    class="sc-jlZhew hIjcWi"
  >
    Do you want to do the thing?
  </div>
</div>
`;
